--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Um.pdf')"
+            onclick="window.open('./assets/RIZWAN SYED RESUME.pdf')"
           >
             Download CV
           </button>
