--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-//done
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -50,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/RIZWAN_SYED_RESUME.pdf')"
+            onclick="window.open('./assets/RIZWAN_RESUME.pdf')"
           >
             Download CV
           </button>
