--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
               />
               <h3>Experience</h3>
               <p>2.5+ years <br /></p>
-              <p><strong>Student Researcher</strong>
+              <p><strong>Research Assistant</strong>
                  at The State University of New York at Buffalo
                 </p>
 
 
-                <p><strong>Dell Campus Ambassador</strong>
+                <p><strong>Software Developer Intern</strong>
                  at Dell Technologies
                   </p>
                   
@@ -226,7 +226,7 @@ I am always open to new opportunities and constantly strive to improve and prove
                 class="project-experience-img-amazon"
               />
               <p>
-                As a Student Researcher at the University at Buffalo, I spearheaded innovative research focused on enhancing energy efficiency in Large Language Models, particularly GPT-2. 
+                As a Research Assistant at the University at Buffalo, I spearheaded innovative research focused on enhancing energy efficiency in Large Language Models, particularly GPT-2. 
                 My research encompassed advanced techniques including Quantization, Distillation, and Low-Rank Factorization methodologies.
                 Through meticulous implementation of Quantization methods, I achieved remarkable results, reducing CO2 emissions by 19.8% while maintaining robust model performance with only a minimal 6% increase in perplexity scores.
                 A significant breakthrough in my research came from combining distillation and quantization approaches, which yielded an impressive 45.2% reduction in emissions, though this came with a 57.4% increase in perplexity - 
@@ -241,7 +241,7 @@ I am always open to new opportunities and constantly strive to improve and prove
                 src="./assets/dell_tech.png"
                 class="project-experience-img-abhi"/>
                 <p>
-                  As a Dell Campus Ambassador at Dell Technologies , I played a pivotal role in utilizing SQL and PowerBI to analyze and present critical data insights, 
+                  As a Software Developer Intern at Dell Technologies , I played a pivotal role in utilizing SQL and PowerBI to analyze and present critical data insights, 
                   effectively identifying trends and anomalies that supported strategic decision-making, resulting in a 75% reduction in analysis time.
                   I led a team to promote Dell Technologies on campus, driving student engagement through seminars and workshops focused on cutting-edge advancements. 
                   Collaborating with cross-functional teams, I streamlined communication and task management, boosting the efficiency of event execution by 20%. 
@@ -257,7 +257,7 @@ I am always open to new opportunities and constantly strive to improve and prove
                 src="./assets/vaya.png"
                 class="project-experience-img-uclid"
               />
-              <p>As a Software Engineer at Vaya Group, I developed a sophisticated supplier onboarding system for Vipani.ai using a microservices-based architecture with Java and SpringBoot.
+              <p>As a Software Developer at Vaya Group, I developed a sophisticated supplier onboarding system for Vipani.ai using a microservices-based architecture with Java and SpringBoot.
                  This system enabled suppliers to provide comprehensive details for effective B2B procurement, enhancing the onboarding process significantly.
                   I implemented a robust file searching system that achieved optimal performance with a p95 latency under 10 milliseconds over a million files, utilizing a Trie-based algorithm with JavaScript, React, and multi-stage caching.
                    Leveraging object-oriented programming concepts, I maintained a modular and structurally simple codebase, facilitating easier maintenance and scalability.
